<resources>

    <string name="app_name">Consumer app</string>
    <string name="profile_toolbar">My Profile</string>
    <string name="editprofile_toolbar">Edit Profile</string>
    <string name="photo_toolbar">Photo Profile</string>

    <string name="save">save</string>
    <string name="persona_data">Personal Data</string>

    <string name="imageprofile_desc">Image Profile</string>
    <string name="your_name">Your name</string>
    <string name="name">Name</string>
    <string name="lastname">Last Name</string>

    <string name="default_phone">+39 123 444 5555</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_email">Your Email Address</string>
    <string name="email">Email Address</string>
    <string name="profile_saved">Your profile has been saved!</string>

    <string name="delivery_desc">Your order will be delivered here</string>
    <string name="delivery">Delivery Address</string>
    <string name="road">Road</string>
    <string name="house_number">Number</string>
    <string name="doorphone">Doorphone</string>
    <string name="postalcode">Postal Code</string>
    <string name="city">City</string>
    <string name="desc_desc">A short description about you</string>
    <string name="description">Description</string>

    <string name="max_length_line">60</string>
    <string name="max_length_description">180</string>
    <string name="max_length_phone">15</string>
    <string name="transition_zoom">transition_zoom</string>

    <string name="check_name">First Name not valid</string>
    <string name="check_lastName">Last Name not valid</string>
    <string name="check_phone">Phone Number not valid</string>
    <string name="check_email">Email Address not valid</string>
    <string name="check_road">Street name not valid</string>
    <string name="check_city">City name not valid</string>
    <string name="check_doorphone">Doorphone not valid</string>
    <string name="check_postCode">Postal Code not valid</string>
    <string name="check_houseNumber">House Number not valid</string>


    <string name="option_shopping">My Shopping Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">status</string>
    <string name="Credit">Credit</string>
    <string name="Total">Total:</string>
    <string name="enter_code">Enter your credit code</string>
    <string name="credit_description">Your credit can be used as payment on your order.</string>
    <string name="data">Date:</string>
    <string name="order_summary">Order summary</string>
    <string name="subtotal">SUBTOTAL</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="null_value">0.00</string>
    <string name="biker_notes">Biker Notes</string>
    <string name="payment">PAYMENT</string>
    <string name="pay_method">Payment method</string>
    <string name="cash">cash</string>
    <string name="time_format">hh:mm</string>
    <string name="datatime_format">dd/mm/yyyy-hh:mm</string>
    <string name="Basket_toolbar">My Shopping Cart</string>
    <string name="datatime_secect">Click here to select delivery time!</string>
    <string name="hint_client_note">Insert here your notes!</string>
    <string name="order_info_toolbar">Order info</string>
    <string name="IncreasedCredit">Rechange:</string>
    <string name="one_value">x1</string>
    <string name="ErrorCredit">Error Credit</string>
    <string name="check_address">Insert Address</string>
    <string name="check_time">Error time</string>
    <string name="check_credit">Error credit</string>
    <string name="empty_basket_error">Basket is empty</string>
    <string name="credit_error">Credit (Error)</string>
    <string name="price_error">Error min order cost</string>
    <string name="invalid_address">Insert a valid Delivery address</string>
    <string name="invalid_time">Invalid Delivery Time</string>
    <string name="euro">Euro</string>
    <string name="use">USE</string>
    <string name="order_by">Order by</string>
    <string name="favourite_list">Favourite list</string>

</resources>
